Using json-c instead of rapidjson
https://github.com/json-c/json-c
Already in SLE, is also a dependency for systemd via libcryptsetup.

--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -12,6 +12,7 @@ RUN dnf -y install \
   gettext \
   glibc-langpack-de \
   glibc-langpack-en \
+  json-c-devel \
   libacl-devel \
   libmount-devel \
   libtool \
@@ -20,7 +21,6 @@ RUN dnf -y install \
   make \
   pam-devel \
   pkgconfig \
-  rapidjson-devel \
   rpm-build
 
 RUN mkdir -p /usr/src/app
