--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -23,12 +23,12 @@ RUN apt-get update && \
   libboost-test-dev \
   libboost-thread-dev \
   libdbus-1-dev \
+  libjson-c-dev \
   libmount-dev \
   libpam-dev \
   libtool \
   libxml2-dev \
   libz-dev \
-  rapidjson-dev \
   ruby-dbus \
   xsltproc
 
