--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -5,7 +5,7 @@ if HAVE_ZYPP
 plugindir = /usr/lib/zypp/plugins/commit
 plugin_PROGRAMS = snapper-zypp-plugin
 
-AM_CPPFLAGS = $(DBUS_CFLAGS) $(XML2_CFLAGS)
+AM_CPPFLAGS = $(DBUS_CFLAGS) $(XML2_CFLAGS) $(JSONC_CFLAGS)
 AM_CXXFLAGS = -Wsuggest-override
 snapper_zypp_plugin_SOURCES = \
     snapper_zypp_plugin.cc \
@@ -15,6 +15,7 @@ snapper_zypp_plugin_LDFLAGS = \
     ../client/libclient.la \
     ../snapper/libsnapper.la \
     ../dbus/libdbus.la \
+    $(JSONC_LIBS) \
     -lboost_regex
 
 endif
