--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -21,13 +21,13 @@ RUN apt-get update && \
   libboost-test-dev \
   libboost-thread-dev \
   libdbus-1-dev \
+  libjson-c-dev \
   libmount-dev \
   libpam-dev \
   libtool \
   libxml2-dev \
   libz-dev \
   locales-all \
-  rapidjson-dev \
   ruby-dbus \
   xsltproc
 
