--- a/data/zypp-plugin.conf
+++ b/data/zypp-plugin.conf
@@ -1,12 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <snapper-zypp-plugin-conf>
+  <!--
+       List of solvables. If the zypp commit transaction includes any solvable
+       listed below, snapper will create pre and post snapshots.
 
-  <!-- List of solvables. If the zypp commit transaction includes any solvable
-       listed below, snapper will create pre and post snapshots. The match
-       attribute defines whether the pattern is a Unix shell-style wildcard
-       ("w") or a Python regular expression ("re"). If any of the matching
-       solvables is marked as important, the snapshots are also marked as
-       important. -->
+       Shell-style wildcards, match="w"
+           Must cover the whole solvable name: the pattern "systemd*" matches
+           systemd-devel, but "systemd" does not.
+
+       Regular Expressions, match="re"
+           POSIX Extended Regular Expression Syntax (man 7 regex).
+           They are automatically anchored at the beginning but not at the
+           end, so "dracut" matches dracut-tools but not plymouth-dracut.
+
+       If any of the matching solvables is marked as important, the snapshots
+       are also marked as important.
+  -->
   <solvables>
     <solvable match="w" important="true">kernel-*</solvable>
     <solvable match="w" important="true">dracut</solvable>
