Debian does not pull in libxml2 via libsnapper?!

--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -24,6 +24,7 @@ regex_test_SOURCES = regex_test.cc \
     solvable_matcher.cc solvable_matcher.h
 regex_test_LDADD = \
     ../snapper/libsnapper.la \
+    $(XML2_LIBS) \
     -lboost_unit_test_framework
 
 endif
