--- a/zypp-plugin/testsuite/Makefile.am
+++ b/zypp-plugin/testsuite/Makefile.am
@@ -1,5 +1,5 @@
 if HAVE_ZYPP
-TEST_LOG_DRIVER = dbus-run-session -- $(SHELL) tap-driver.sh
+TEST_LOG_DRIVER = $(SHELL) tap-driver.sh
 
 check_SCRIPTS = 1-happy.test 2-malformed-xml.test 3-invalid-xml.test 4-badjson.test 99-shell.test
 noinst_SCRIPTS = mock-snapperd test-helper.sh
