--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -20,6 +20,9 @@
   %define _fillupdir /var/adm/fillup-templates
 %endif
 
+# optionally build with test coverage reporting
+%bcond_with coverage
+
 Name:           snapper
 Version:        @VERSION@
 Release:        0
@@ -76,6 +79,9 @@ BuildRequires:  json-c-devel
 %else
 BuildRequires:  libjson-c-devel
 %endif
+%if %{with coverage}
+BuildRequires:  lcov
+%endif
 Requires:       diffutils
 Requires:       libsnapper@LIBVERSION_MAJOR@ = %version
 %if 0%{?suse_version}
@@ -100,6 +106,9 @@ export CXXFLAGS="%{optflags} -DNDEBUG"
 autoreconf -fi
 %configure \
 	--docdir="%{_defaultdocdir}/snapper"				\
+%if %{with coverage}
+	--enable-coverage \
+%endif
 %if 0%{?suse_version} <= 1310
 	--disable-rollback							\
 %endif
