Coverage with coveralls.io
https://docs.travis-ci.com/user/coveralls/

In https://travis-ci.org/openSUSE/snapper/settings ,
section Environment Variables, add COVERALLS_TOKEN with the value
of Repo Token seen at https://coveralls.io/github/openSUSE/snapper/settings

rubygem-coveralls-lcov wants to ask git but does not declare the dependency.

To import the GPG key I wanted to

    RUN rpm --import https://build.opensuse.org/projects/YaST/public_key

but that failed:

    error: https://build.opensuse.org/projects/YaST/public_key: import read failed(2).

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
 script:
   # run the respective .travis.<distro>.sh script
   # (--privileged: integration tests mount a loopback device etc.)
-  - docker run --privileged -it snapper-devel ./.travis.$BUILD_FLAVOR.sh
+  - docker run --privileged -it -e COVERALLS_TOKEN="$COVERALLS_TOKEN" snapper-devel ./.travis.$BUILD_FLAVOR.sh
