Deduplicate Dockerfiles with ARG
https://docs.docker.com/engine/reference/builder/#arg
https://docs.docker.com/engine/reference/builder/#from

--- a/Dockerfile.debian
+++ b/Dockerfile.debian
@@ -1,36 +1,1 @@
-# Build Debian 9 image
-FROM debian:9
-
-# see https://docs.docker.com/engine/userguide/eng-image/dockerfile_best-practices/#/run
-RUN apt-get update && \
-  apt-get install -y --no-install-recommends \
-  acl-dev \
-  autoconf \
-  automake \
-  build-essential \
-  dbus \
-  debhelper \
-  devscripts \
-  docbook-xsl \
-  fakeroot \
-  g++ \
-  gettext \
-  libboost-dev \
-  libboost-system-dev \
-  libboost-test-dev \
-  libboost-thread-dev \
-  libdbus-1-dev \
-  libjson-c-dev \
-  libmount-dev \
-  libpam-dev \
-  libtool \
-  libxml2-dev \
-  libz-dev \
-  locales-all \
-  ruby-dbus \
-  xsltproc
-
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-
-COPY . /usr/src/app
+Dockerfile.ubuntu
