--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,12 @@ env:
   - BUILD_FLAVOR=tumbleweed
   - BUILD_FLAVOR=leap
   - BUILD_FLAVOR=fedora
-  - BUILD_FLAVOR=ubuntu
-  - BUILD_FLAVOR=debian
+  - BUILD_FLAVOR=ubuntu DOCKER_TAG=18.10
+  - BUILD_FLAVOR=debian DOCKER_TAG=9
 
 before_install:
   # use the Dockerfile.<distro> file for building the image
-  - docker build -f Dockerfile.$BUILD_FLAVOR -t snapper-devel .
+  - docker build -f Dockerfile.$BUILD_FLAVOR -t snapper-devel --build-arg BUILD_FLAVOR=$BUILD_FLAVOR --build-arg DOCKER_TAG=$DOCKER_TAG .
 
 script:
   # run the respective .travis.<distro>.sh script
