Fix building without optimization on Fedora
This fixes a configure test for cross compilation. I don't know why it
works, so if it breaks, throw it away.

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -102,8 +102,9 @@ This package contains snapper, a tool for filesystem snapshot management.
 %build
 %if %{with coverage}
 # optimized code may confuse the coverage measurement, turn it off
-export CFLAGS="-g3"
-export CXXFLAGS="-g3"
+# -fPIC is mysteriously needed on Fedora.
+export CFLAGS="-g3 -fPIC"
+export CXXFLAGS="-g3 -fPIC"
 %else
 export CFLAGS="%{optflags} -DNDEBUG"
 export CXXFLAGS="%{optflags} -DNDEBUG"
