--- a/Makefile.am
+++ b/Makefile.am
@@ -30,7 +30,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_17.10	\
     xUbuntu_18.04	\
     xUbuntu_18.10	\
-    xUbuntu_19.04
+    xUbuntu_19.04	\
+    xUbuntu_19.10
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
