--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,6 +2,7 @@
 # Makefile.am for snapper/doc
 #
 
+if ENABLE_DOC
 man_MANS = snapper.8 snapperd.8 snapper-configs.5
 
 if HAVE_PAM
@@ -29,6 +30,7 @@ html: $(man_MANS:%.5=%.html) $(man_MANS:%.8=%.html)
 
 EXTRA_DIST = dbus-protocol.txt manpages.xsl html.xsl selinux-readme.txt
 
+endif
 
 clean-local:
 	rm -f *.{5,8} *.html
