- generate Ubuntu 20.04 file

--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,8 @@ UBUNTU_FLAVOURS =	\
     xUbuntu_18.04	\
     xUbuntu_18.10	\
     xUbuntu_19.04	\
-    xUbuntu_19.10
+    xUbuntu_19.10	\
+    xUbuntu_20.04
 
 show-debian:
 	@echo "Debian flavors: $(DEBIAN_FLAVOURS)"
