- try to fix Travis CI Fedora build

--- a/Dockerfile.fedora
+++ b/Dockerfile.fedora
@@ -27,7 +27,8 @@ RUN dnf -y install \
   make \
   pam-devel \
   pkgconfig \
-  rpm-build
+  rpm-build \
+  systemd
 
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
