- improved error reporting in getopt wrapper (part of bsc#1150156)

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -8,7 +8,7 @@ LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_unit_test_framework
 
 check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test		    \
 	equal-date.test dbus-escape.test cmp-lt.test humanstring.test table.test    \
-	csv-formatter.test json-formatter.test
+	csv-formatter.test json-formatter.test getopts.test
 
 if ENABLE_BTRFS_QUOTA
 check_PROGRAMS += qgroup1.test
@@ -29,3 +29,5 @@ table_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 csv_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
 json_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
+
+getopts_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
