--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -1,3 +1,7 @@
+#
+# Makefile.am for snapper/zypp-plugin
+#
+
 SUBDIRS = . testsuite
 
 if HAVE_ZYPP
@@ -6,11 +10,13 @@ plugindir = /usr/lib/zypp/plugins/commit
 plugin_PROGRAMS = snapper-zypp-plugin
 
 AM_CPPFLAGS = $(DBUS_CFLAGS) $(XML2_CFLAGS) $(JSONC_CFLAGS)
+
 snapper_zypp_plugin_SOURCES = \
     snapper_zypp_plugin.cc \
     solvable_matcher.cc solvable_matcher.h \
     zypp_commit_plugin.cc zypp_commit_plugin.h \
     zypp_plugin.cc zypp_plugin.h
+
 snapper_zypp_plugin_LDADD = \
     ../client/libclient.la \
     ../snapper/libsnapper.la \
@@ -22,14 +28,17 @@ check_PROGRAMS = regex.test forwarding-zypp-plugin
 forwarding_zypp_plugin_SOURCES = \
     forwarding_zypp_plugin.cc \
     zypp_plugin.cc zypp_plugin.h
+
 forwarding_zypp_plugin_LDADD = \
     ../snapper/libsnapper.la \
     -lboost_system \
     -lpthread
 
 TESTS = regex.test
+
 regex_test_SOURCES = regex_test.cc \
     solvable_matcher.cc solvable_matcher.h
+
 regex_test_LDADD = \
     ../snapper/libsnapper.la \
     $(XML2_LIBS) \
