fix LVM setup for LVM with one character long names

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -48,7 +48,8 @@ endif
 if ENABLE_LVM
 libsnapper_la_SOURCES +=				\
 	Lvm.cc			Lvm.h			\
-	LvmCache.cc		LvmCache.h
+	LvmCache.cc		LvmCache.h		\
+	LvmUtils.cc		LvmUtils.h
 endif
 
 if ENABLE_ROLLBACK
