--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -8,7 +8,7 @@ LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_unit_test_framework
 
 check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test		    \
 	equal-date.test dbus-escape.test cmp-lt.test humanstring.test table.test    \
-	csv-formatter.test json-formatter.test getopts.test
+	csv-formatter.test json-formatter.test getopts.test lvm-utils.test
 
 if ENABLE_BTRFS_QUOTA
 check_PROGRAMS += qgroup1.test
@@ -31,3 +31,5 @@ csv_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.
 json_formatter_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
 getopts_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
+
+lvm_utils_test_LDADD = -lboost_unit_test_framework ../snapper/libsnapper.la
