- fixed BuildRequires for CentOS

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -17,7 +17,7 @@ all: $(MOFILES)
 $(PACKAGE).pot: $(SRCFILES)
 	$(XGETTEXT) --sort-output --no-wrap --add-comments --no-location \
 	    --keyword=_ --keyword=_:1,2 --foreign-user \
-	    --copyright-holder="SUSE LLC, Nuernberg" \
+	    --copyright-holder="SUSE LLC" \
 	    --default-domain=$(PACKAGE) --output=$(PACKAGE).pot $(SRCFILES)
 
 %.mo: %.po
