--- a/.github/workflows/ci-leap.yml
+++ b/.github/workflows/ci-leap.yml
@@ -1,16 +1,16 @@
-name: CI
+name: CI Leap
 
 on: [push, pull_request]
 
 jobs:
   Tests:
     runs-on: ubuntu-latest
-    container: registry.opensuse.org/opensuse/tumbleweed:latest
+    container: opensuse/leap
 
     steps:
 
     - name: Install additional packages
-      run: zypper --non-interactive in --no-recommends autoconf automake bzip2 dbus-1-devel docbook-xsl-stylesheets e2fsprogs-devel gcc-c++ gettext-runtime glibc-locale libacl-devel libboost_system-devel libboost_test-devel libboost_thread-devel libbtrfs-devel libjson-c-devel libmount-devel libtool libxml2-devel libxslt make pam-devel
+      run: zypper --non-interactive in --no-recommends autoconf automake bzip2 dbus-1-devel docbook-xsl-stylesheets e2fsprogs-devel gcc-c++ gettext-runtime glibc-locale gzip libacl-devel libboost_system-devel libboost_test-devel libboost_thread-devel libbtrfs-devel libjson-c-devel libmount-devel libtool libxml2-devel libxslt make pam-devel
 
     - name: List installed packages
       run: rpm -qa | sort
