--- a/zypp-plugin/Makefile.am
+++ b/zypp-plugin/Makefile.am
@@ -23,7 +23,7 @@ snapper_zypp_plugin_LDADD = \
     ../dbus/libdbus.la \
     $(JSONC_LIBS)
 
-check_PROGRAMS = regex.test forwarding-zypp-plugin
+check_PROGRAMS = solvable_matcher.test forwarding-zypp-plugin
 
 forwarding_zypp_plugin_SOURCES = \
     forwarding_zypp_plugin.cc \
@@ -34,12 +34,12 @@ forwarding_zypp_plugin_LDADD = \
     -lboost_system \
     -lpthread
 
-TESTS = regex.test
+TESTS = solvable_matcher.test
 
-regex_test_SOURCES = regex_test.cc \
+solvable_matcher_test_SOURCES = solvable_matcher_test.cc \
     solvable_matcher.cc solvable_matcher.h
 
-regex_test_LDADD = \
+solvable_matcher_test_LDADD = \
     ../snapper/libsnapper.la \
     $(XML2_LIBS) \
     -lboost_unit_test_framework
