- fixed compilation in latest openSUSE:Factory

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -64,7 +64,7 @@ libsnapper_la_SOURCES +=				\
 endif
 
 libsnapper_la_LDFLAGS = -version-info @LIBVERSION_INFO@
-libsnapper_la_LIBADD = -lboost_thread -lboost_system $(XML2_LIBS) -lacl -lz -lm
+libsnapper_la_LIBADD = -lboost_thread -lboost_system $(XML2_LIBS) -lacl
 if ENABLE_ROLLBACK
 libsnapper_la_LIBADD += -lmount
 endif
