- fixed testsuite for equal-date

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -9,7 +9,7 @@ LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_unit_test_framework
 check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test 		\
 	equal-date.test dbus-escape.test cmp-lt.test humanstring.test 		\
 	table.test table-formatter.test csv-formatter.test json-formatter.test	\
-	getopts.test
+	getopts.test scan-datetime.test
 
 if ENABLE_BTRFS_QUOTA
 check_PROGRAMS += qgroup1.test
@@ -26,6 +26,8 @@ AM_DEFAULT_SOURCE_EXT = .cc
 EXTRA_DIST = $(noinst_SCRIPTS) sysconfig-get1.txt sysconfig-set1.txt
 
 equal_date_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
+
+scan_datetime_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
 humanstring_test_LDADD = -lboost_unit_test_framework ../client/utils/libutils.la
 
