- fixed creating root config (root prefix handling)

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -9,7 +9,7 @@ LDADD = ../snapper/libsnapper.la ../dbus/libdbus.la -lboost_unit_test_framework
 check_PROGRAMS = sysconfig-get1.test dirname1.test basename1.test 		\
 	equal-date.test dbus-escape.test cmp-lt.test humanstring.test 		\
 	table.test table-formatter.test csv-formatter.test json-formatter.test	\
-	getopts.test scan-datetime.test
+	getopts.test scan-datetime.test root-prefix.test
 
 if ENABLE_BTRFS_QUOTA
 check_PROGRAMS += qgroup1.test
